k8s/tzbtc-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __PROJECT_NAME__
  namespace: __NAMESPACE_NAME__
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - __PROJECT_NAME__.dev.gke.papers.tech
      secretName: __PROJECT_NAME__-tls
  rules:
    - host: __PROJECT_NAME__.dev.gke.papers.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: __PROJECT_NAME__-service
                port:
                  number: 80
